# Aura

./: .gitignore  README.en.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  analysis-claude-codex-write-strategy.md  app-version.mjs  index.html  package.json  pnpm-lock.yaml  release.sh  sidecar_optimization_plan.md  tsconfig.json  uno.config.ts  vite.config.ts  长任务不落盘根因分析.md
bridge/: advancedTools.mjs  advancedTools.test.mjs  agent.mjs  agentDefaultStepRuntime.test.mjs  agentEvidence.mjs  agentEvidence.test.mjs  agentFastPath.test.mjs  agentGovernor.mjs  agentPrompting.mjs  agentPrompting.test.mjs  agentRouting.mjs  agentRouting.test.mjs  agentRuntimeLogs.mjs  agentRuntimeLogs.test.mjs  agentSubagentTools.test.mjs  browserProfileActions.mjs  browserRuntime.mjs  capabilitySelector.mjs  capabilitySelector.test.mjs  checkpoint.mjs  checkpoint.test.mjs  cli.mjs  completionGate.mjs  completionGate.test.mjs  contextCompression.mjs  contextCompression.test.mjs  execPolicy.mjs  execPolicy.test.mjs  executionIds.mjs  executor.mjs  extensions.mjs  extensions.test.mjs  intentClassifier.mjs  intentClassifier.test.mjs  ipc.mjs  lightpandaRuntime.mjs  manualContextCompression.mjs  mcp.mjs  mcpActions.mjs  projectMemory.mjs  (+35 more)
docs/: ARCHITECTURE.md  WEB_SEARCH_GUIDE.md  agent-execution-branch-comparison.md  agent-four-step-modernization-plan.md  agent-product-architecture-enhancement-plan.md  agent_architecture_solutions.md  agent_behavior_analysis.md  agent_dual_mode_detailed_design.md  agent_editing_optimization_plan.md  agent_refactor_blueprint.md  analysis-context-compression.md  analysis-memory-optimization.md  analysis-token-consumption.md  analysis-vs-codex.md  architecture-comparison-report.md  browser-automation-design.md  browser-automation-task-list.md  browser-runtime-experience-upgrade-design.md  code_editing_refactor_detailed_design.md  ddg_failure_analysis.md  intent-classification-design.md  lightpanda-system-browser-simplification-design.md  long-task-architecture-analysis.md  long-task-runtime-optimization.md  long_review  new-architecture-migration-guide.md  openclaw_ddg_compare.md  project-memory-agent-design.md  reasoning_display_optimization.md  reference-1.2.0-architecture-refactor-plan.md  review-memory-optimization-v1.md  review-tool-evidence-loop-fix.md  route_first_completion_state_design.md  sidecar_optimization_plan.md  subagent-implementation-plan.md  task-g2c111nz-failure-analysis.md  test.md  test_review.md  web-tools-design.md  web_research_design.md  (+4 more)
plugins/: git-helper.mjs  workspace-inspector.mjs
scripts/: build-bridge.mjs  create-updater-latest-json.mjs  release.sh  sync-app-version.mjs
skills/: aura-browser-operator.md  desktop-operator.md  repair-planner.md  repo-reviewer.md  web-research.md
src/: App.tsx  LogViewerWindowApp.tsx  MainWindowApp.tsx  McpEditorWindowApp.tsx  QueryEngine.ts  SettingsWindowApp.tsx  catalog.ts  commands.ts  (+10 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: main.rs
(+548 files in other folders)
