[package]
name = "desk-agent-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
pbkdf2 = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2.8.2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
